regularize whitespace below paragraph, h2, h3, and unordered list; fixes #111

--- a/src/isaw.theme/isaw/theme/static/theme.css
+++ b/src/isaw.theme/isaw/theme/static/theme.css
@@ -231,8 +231,8 @@ fieldset#search-field {text-align:left !important; }
 .template-usergroup-userprefs #portal-columns #column-contents,
 .template-usergroup-groupprefs #portal-columns #column-contents {overflow: visible; }
 #portal-columns h1, #content h1 {font-family:Questrial, 'Nimbus Sans', Univers, Geneva, sans-serif; font-size:36px; font-weight:400; letter-spacing:0.5px; text-transform:uppercase; line-height:100%; }
-#portal-columns h2, #content h2 {font-family:Questrial, 'Nimbus Sans', Univers, Geneva, sans-serif; font-size:30px; font-weight:400; letter-spacing:0.5px; line-height:100%;}
-#portal-columns h3, #content h3 {font-family:Questrial, 'Nimbus Sans', Univers, Geneva, sans-serif; font-size:22px; font-weight:400; letter-spacing:0.5px; line-height:100%;}
+#portal-columns h2, #content h2 {font-family:Questrial, 'Nimbus Sans', Univers, Geneva, sans-serif; font-size:30px; font-weight:400; letter-spacing:0.5px; line-height:100%; margin:0 0 28px;}
+#portal-columns h3, #content h3 {font-family:Questrial, 'Nimbus Sans', Univers, Geneva, sans-serif; font-size:22px; font-weight:400; letter-spacing:0.5px; line-height:100%; margin:0 0 28px;}
 #portal-columns dl dt, #content dl dt {font-family:'Open Sans', Arial, Helvetica, sans-serif; font-size:22px; font-weight:800; letter-spacing:.7px; line-height:100%; }
 #portal-columns h4, #content h4,
 #portal-columns form fieldset legend, #content form fieldset legend,
@@ -253,7 +253,7 @@ fieldset#search-field {text-align:left !important; }
 #portal-columns #relatedItemBox dd {font-size:14px; margin-left:0; }
 #portal-columns #relatedItemBox dd a {text-decoration:underline; }
 
-#portal-columns ul { }
+#portal-columns ul { margin-bottom: 28px; }
 
 #portal-columns ul.red, #content ul.red {color:#9b3a25; font-family:'Open Sans', Arial, Helvetica, sans-serif; font-size:22px; font-weight:800; letter-spacing:.7px; line-height:100%; margin-bottom: 58px; text-transform:uppercase;}
 #portal-columns ul.red li, #content ul.red li {margin:0 0 24px; }
